--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Главная</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
 <nav>
   <a href="index.html">Главная</a>
   <a href="page1.html">Стр.1</a>
@@ -7,3 +17,11 @@
   <a href="page5.html">Стр.5</a>
   <a href="page6.html">Стр.6</a>
 </nav>
+
+<main>
+  <h1>Главная страница</h1>
+  <p>Сайт: 6 страниц, 3 ветки Git, публикация на GitHub Pages.</p>
+</main>
+
+</body>
+</html>
